# Distributed-Concurrency-and-Actors

./: .pre-commit-config.yaml  Cargo.toml  README.md  tp-concurrentes.excalidraw
data/: ordenes_ecommerce.txt  ordenes_local_1.txt  ordenes_local_2.txt  stock_local_2.txt
src/: common.rs  ecommerce.rs  local_main.rs
src/common/: conexion_tcp.rs  cordinador.rs  error_local.rs  lector_csv.rs  local.rs  mensaje_protocolo.rs  orden.rs  socket.rs  stock_producto.rs
